--- a/cherrystudio/public/miniWindow.html
+++ b/cherrystudio/public/miniWindow.html
@@ -14,7 +14,7 @@
         margin: 0;
       }
     </style>
-    <script type="module" crossorigin src="./assets/miniWindow-Cug1eLLM.js"></script>
+    <script type="module" crossorigin src="./assets/miniWindow-BPoB7KqE.js"></script>
     <link rel="modulepreload" crossorigin href="./assets/preload-helper-T0xubxxH.js">
     <link rel="modulepreload" crossorigin href="./assets/schemas-Bbbixa2f.js">
     <link rel="modulepreload" crossorigin href="./assets/types-Db4HyS8d.js">
@@ -89,7 +89,6 @@
     <link rel="modulepreload" crossorigin href="./assets/maximize-B7z4TIpG.js">
     <link rel="modulepreload" crossorigin href="./assets/menu-Cbt-nPTX.js">
     <link rel="modulepreload" crossorigin href="./assets/minimize-2-BUEjqZCp.js">
-    <link rel="modulepreload" crossorigin href="./assets/minus-CRNbzMeR.js">
     <link rel="modulepreload" crossorigin href="./assets/notebook-pen-BcNsWWSI.js">
     <link rel="modulepreload" crossorigin href="./assets/paperclip-BuaQyLAK.js">
     <link rel="modulepreload" crossorigin href="./assets/pencil-ruler-DifyOviw.js">
@@ -115,15 +114,15 @@
     <link rel="modulepreload" crossorigin href="./assets/x-vNMQm1V5.js">
     <link rel="modulepreload" crossorigin href="./assets/zoom-in-Bep5HRIm.js">
     <link rel="modulepreload" crossorigin href="./assets/zoom-out-Cw6bVs6T.js">
-    <link rel="modulepreload" crossorigin href="./assets/store-BXIkfHlQ.js">
+    <link rel="modulepreload" crossorigin href="./assets/store-D974zOUI.js">
     <link rel="modulepreload" crossorigin href="./assets/client-DIvF-ima.js">
     <link rel="modulepreload" crossorigin href="./assets/react-B9mOy8dT.js">
     <link rel="modulepreload" crossorigin href="./assets/en_US-CaGzDOwj.js">
-    <link rel="modulepreload" crossorigin href="./assets/LanguageSelect-DvfqDtUZ.js">
+    <link rel="modulepreload" crossorigin href="./assets/LanguageSelect-Da_N5IXG.js">
     <link rel="modulepreload" crossorigin href="./assets/circle-arrow-left-BwelSthp.js">
     <link rel="modulepreload" crossorigin href="./assets/message-square-dvBKeDt0.js">
     <link rel="modulepreload" crossorigin href="./assets/pin-CdQbSaxS.js">
-    <link rel="modulepreload" crossorigin href="./assets/HomeWindow-BYY9BpGY.js">
+    <link rel="modulepreload" crossorigin href="./assets/HomeWindow-B6wWlqSd.js">
     <link rel="stylesheet" crossorigin href="./assets/store-EMpv-oyd.css">
     <link rel="stylesheet" crossorigin href="./assets/LanguageSelect-Cy7wSlyd.css">
   </head>
