--- a/cherrystudio/public/selectionAction.html
+++ b/cherrystudio/public/selectionAction.html
@@ -7,7 +7,7 @@
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; connect-src blob: *; script-src 'self' 'unsafe-eval' *; worker-src 'self' blob:; style-src 'self' 'unsafe-inline' *; font-src 'self' data: *; img-src 'self' data: file: * blob:; frame-src * file:" />
     <title>Cherry Studio Selection Assistant</title>
-    <script type="module" crossorigin src="./assets/selectionAction-BzFpeoDy.js"></script>
+    <script type="module" crossorigin src="./assets/selectionAction-ByybOphx.js"></script>
     <link rel="modulepreload" crossorigin href="./assets/preload-helper-T0xubxxH.js">
     <link rel="modulepreload" crossorigin href="./assets/schemas-Bbbixa2f.js">
     <link rel="modulepreload" crossorigin href="./assets/types-Db4HyS8d.js">
@@ -82,7 +82,6 @@
     <link rel="modulepreload" crossorigin href="./assets/maximize-B7z4TIpG.js">
     <link rel="modulepreload" crossorigin href="./assets/menu-Cbt-nPTX.js">
     <link rel="modulepreload" crossorigin href="./assets/minimize-2-BUEjqZCp.js">
-    <link rel="modulepreload" crossorigin href="./assets/minus-CRNbzMeR.js">
     <link rel="modulepreload" crossorigin href="./assets/notebook-pen-BcNsWWSI.js">
     <link rel="modulepreload" crossorigin href="./assets/paperclip-BuaQyLAK.js">
     <link rel="modulepreload" crossorigin href="./assets/pencil-ruler-DifyOviw.js">
@@ -108,17 +107,18 @@
     <link rel="modulepreload" crossorigin href="./assets/x-vNMQm1V5.js">
     <link rel="modulepreload" crossorigin href="./assets/zoom-in-Bep5HRIm.js">
     <link rel="modulepreload" crossorigin href="./assets/zoom-out-Cw6bVs6T.js">
-    <link rel="modulepreload" crossorigin href="./assets/store-BXIkfHlQ.js">
+    <link rel="modulepreload" crossorigin href="./assets/store-D974zOUI.js">
     <link rel="modulepreload" crossorigin href="./assets/client-DIvF-ima.js">
     <link rel="modulepreload" crossorigin href="./assets/react-B9mOy8dT.js">
     <link rel="modulepreload" crossorigin href="./assets/en_US-CaGzDOwj.js">
-    <link rel="modulepreload" crossorigin href="./assets/LanguageSelect-DvfqDtUZ.js">
+    <link rel="modulepreload" crossorigin href="./assets/LanguageSelect-Da_N5IXG.js">
     <link rel="modulepreload" crossorigin href="./assets/es-b6OitYrJ.js">
     <link rel="modulepreload" crossorigin href="./assets/CopyButton-DSS0TKD7.js">
-    <link rel="modulepreload" crossorigin href="./assets/DynamicIcon-STqVYK2s.js">
+    <link rel="modulepreload" crossorigin href="./assets/DynamicIcon-ZbE2EmVj.js">
     <link rel="modulepreload" crossorigin href="./assets/arrow-right-from-line-Wi6JWyk1.js">
     <link rel="modulepreload" crossorigin href="./assets/arrow-right-to-line-DmWYKJ0O.js">
     <link rel="modulepreload" crossorigin href="./assets/droplet-DGubLLoL.js">
+    <link rel="modulepreload" crossorigin href="./assets/minus-CRNbzMeR.js">
     <link rel="modulepreload" crossorigin href="./assets/pause-BzQSLsI4.js">
     <link rel="modulepreload" crossorigin href="./assets/pin-CdQbSaxS.js">
     <link rel="stylesheet" crossorigin href="./assets/store-EMpv-oyd.css">
